<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2013-2016 The CyanogenMod Project
               (C) 2017 The LineageOS Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <!-- Title and summary -->
    <string name="moto_actions_title">Moto Settings</string>
    <string name="moto_actions_summary">Yea we call it shit</string>

    <!-- Device gestures -->
    <string name="device_gestures_title">Device gestures</string>
    <string name="device_gestures_summary">Manage device gestures</string>

    <!-- Ambient display gestures -->
    <string name="ambient_display_manage_summary">Manage ambient display gestures</string>

    <!-- Fingerprint gestures -->
    <string name="fingerprint_gestures_title">Fingerprint gestures</string>
    <string name="fingerprint_gestures_summary">Use fingerprint gestures</string>
    <string name="fingerprint_gestures_manage_summary">Manage fingerprint gestures</string>
    <string name="fingerprint_actions_screenon">Actions with screen on</string>
    <string name="fingerprint_tap_title">Single tap</string>
    <string name="fingerprint_tap_dlg_title">Select action for single tap</string>
    <string name="fingerprint_double_tap_title">Double tap</string>
    <string name="fingerprint_double_tap_dlg_title">Select action for double tap</string>
    <string name="fingerprint_long_tap_title">Long tap</string>
    <string name="fingerprint_long_tap_dlg_title">Select action for long tap</string>
    <string name="fingerprint_swipe_left_title">Swipe left</string>
    <string name="fingerprint_swipe_left_dlg_title">Select action for swipe left</string>
    <string name="fingerprint_swipe_right_title">Swipe right</string>
    <string name="fingerprint_swipe_right_dlg_title">Select action for swipe right</string>

    <!-- Fingerprint gestures screen off -->
    <string name="fingerprint_gestures_screenoff_title">Fingerprint gestures when screen off</string>
    <string name="fingerprint_gestures_screenoff_summary">Use fingerprint gestures when screen off.\n\nFingerprint unlocking must be disabled to use this feature.</string>
    <string name="fingerprint_actions_screenoff">Actions with screen off</string>

    <!-- Actions -->
    <string name="action_none">None</string>
    <string name="action_home">Home</string>
    <string name="action_power">Screen on/off</string>
    <string name="action_wake">Wake</string>
    <string name="action_back">Back</string>
    <string name="action_recents">Recents</string>
    <string name="action_last_app">Last app</string>
    <string name="action_volume_up">Volume up</string>
    <string name="action_volume_down">Volume down</string>
    <string name="action_voice_assistant">Voice assistant</string>
    <string name="action_play_pause">Play/pause</string>
    <string name="action_previous_track">Previous track</string>
    <string name="action_next_track">Next track</string>
    <string name="action_flashlight">Flashlight on/off</string>
    <string name="action_camera">Open camera</string>
    <string name="action_screenshot">Take screenshot</string>
    <string name="action_browser">Open browser</string>
    <string name="action_dialer">Open dialer</string>
    <string name="action_email">Open email app</string>
    <string name="action_messages">Open messages app</string>

    <!-- Screen off gestures -->
    <string name="screen_off_gestures_title">Screen off gestures</string>
    <string name="screen_off_gestures_manage_summary">Manage gestures when screen is off</string>
    <string name="screen_off_gestures_swipe_left_title">Swipe left</string>
    <string name="screen_off_gestures_swipe_left_dlg_title">Select action for swipe left</string>
    <string name="screen_off_gestures_swipe_right_title">Swipe right</string>
    <string name="screen_off_gestures_swipe_right_dlg_title">Select action for swipe right</string>
    <string name="screen_off_gestures_swipe_up_title">Swipe up</string>
    <string name="screen_off_gestures_swipe_up_dlg_title">Select action for swipe up</string>
    <string name="screen_off_gestures_swipe_down_title">Swipe down</string>
    <string name="screen_off_gestures_swipe_down_dlg_title">Select action for swipe down</string>

   <!-- Double tap to wake -->
   <string name="tap_to_wake">Tap to wake</string>
   <string name="tap_to_wake_summary">Double-tap anywhere on the screen to wake device</string>

   <!-- Screen off gestures haptic feedback -->
   <string name="haptic_feedback">Haptic feedback</string>
   <string name="haptic_feedback_summary">Vibrate when a touchscreen gesture is detected</string>

    <!-- Dirac settings -->
    <!-- Label for feature switch [CHAR LIMIT=30] -->
    <string name="switch_bar_on">On</string>

    <!-- Label for feature switch [CHAR LIMIT=30] -->
    <string name="switch_bar_off">Off</string>

    <string name="sound_title">Dirac</string>
    <string name="dirac_title">Dirac sound enhancer</string>
    <string name="dirac_summary">Optimize audio quality</string>
    <string name="dirac_headset_title">Choose headphone type</string>
    <string name="dirac_preset_title">Choose a preset</string>

    <string name="dirac_headset_default">Default</string>
    <string name="dirac_headset_earbuds">Mi Earbuds</string>
    <string name="dirac_headset_in_ear_2013">Mi In-Ear (2013)</string>
    <string name="dirac_headset_piston_1">Mi Piston-1</string>
    <string name="dirac_headset_general">General</string>
    <string name="dirac_headset_general_inear">General In-Ear</string>
    <string name="dirac_headset_piston_basic">Basic Edition</string>
    <string name="dirac_headset_piston_2">Mi Piston-2</string>
    <string name="dirac_headset_piston_standard">Standard Edition</string>
    <string name="dirac_headset_headphone">Mi Headphones</string>
    <string name="dirac_headset_piston_youth">Youth Edition</string>
    <string name="dirac_headset_piston_color">Color Edition</string>
    <string name="dirac_headset_in_ear">Mi In-Ear</string>
    <string name="dirac_headset_capsule">Mi Capsule</string>
    <string name="dirac_headset_in_ear_pro">Mi In-Ear Pro</string>
    <string name="dirac_headset_comfort">Mi Comfort</string>
    <string name="dirac_headset_reduction_noise">Mi Noise Cancelling Type-C</string>
    <string name="dirac_headset_cancelling">Mi Noise Cancelling 3.5mm</string>
    <string name="dirac_headset_half_in_ear">Mi Half In-Ear</string>
    <string name="dirac_headset_in_ear2">Mi In-Ear 2</string>
    <string name="dirac_headset_earphone_basic">Mi Earphones Basic</string>
    <string name="dirac_headset_earphone">Mi Earphones</string>

    <string name="dirac_preset_default">Default</string>
    <string name="dirac_preset_rock">Rock</string>
    <string name="dirac_preset_jazz">Jazz</string>
    <string name="dirac_preset_pop">Pop</string>
    <string name="dirac_preset_classical">Classical</string>
    <string name="dirac_preset_hiphop">Hip Hop</string>
    <string name="dirac_preset_blues">Blues</string>
    <string name="dirac_preset_electronic">Electronic</string>
    <string name="dirac_preset_country">Country</string>
    <string name="dirac_preset_dance">Dance</string>
    <string name="dirac_preset_metal">Metal</string>

    <!-- Spectrum Profiles -->
    <string name="spectrum_title">Kernel Profile</string>
    <string name="spectrum_summary">Choose your kernel profile</string>
    <string name="spectrum_dialogTitle">Choose your kernel profile</string>
 
    <!-- Headers -->
    <string name="displayheader">Display</string>
    <string name="gesturesheader">Gestures</string>
    <string name="extrasheader">Extras</string>

    <!-- QS tile title -->
    <string name="dirac_qs_tile_title">Dirac Sound</string>

    <!-- Kcal -->
    <string name="kcal_title">Display Calibration</string>
    <string name="kcal_summary">Display color calibration</string>
    <string name="kcal_enabled_title">Enable KCAL</string>
    <string name="kcal_enabled_summary">Turn on display calibration</string>
    <string name="kcal_red">Red</string>
    <string name="kcal_green">Green</string>
    <string name="kcal_blue">Blue</string>
    <string name="kcal_saturation">Saturation</string>
    <string name="kcal_contrast">Contrast</string>
    <string name="menu_reset">Reset</string>
    <string name="kcal_color_temp">Color temperature (K)</string>
    <string name="kcal_hue">Hue</string>
    <string name="kcal_value">Value</string>
    <string name="kcal_greyscale_title">Greyscale</string>
    <string name="kcal_greyscale_summary">Fully disable saturation</string>
    <string name="presets_list_title">Load KCAL preset</string>
    <string name="default_values">Default</string>
    <string name="version_1">Version 1</string>
    <string name="version_2">Version 2</string>
    <string name="version_3">Version 3</string>
    <string name="triluminous">Triluminous</string>
    <string name="deep_black_and_white">Deep Black and White</string>
    <string name="deep_natural">Deep Natural</string>
    <string name="cool_amoled">Cool Amoled</string>
    <string name="extreme_amoled">Extreme Amoled</string>
    <string name="warm_amoled">Warm Amoled</string>
    <string name="hybrid_mamba">Hybrid Mamba</string>

    <!-- Log Tile -->
    <string name="quick_settings_log_tile_label">LogTile</string>
    <string name="quick_settings_log_tile_dialog_title">Options</string>
    <string name="cannot_get_su">Action failed because of missing superuser access</string>
</resources>
